Still fixing the buy button on mobile :@

--- a/Presentation/Nop.Web/Themes/DefaultClean/Content/theater.css
+++ b/Presentation/Nop.Web/Themes/DefaultClean/Content/theater.css
@@ -495,6 +495,8 @@ border: 2px solid #C8133C;
     .header-logo a.logo-site {
     	float: left;
     	margin-left: 9px;
+    	width: 138px;
+        margin-top: 10px;
     }
     .header-logo {
     	float: none;
